infinite scrolling in, working out bugs on scroll event

--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
 
 <head>
     <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 
     <title>Infinite Twitter Search</title>
     <meta name="description" content="An Infinite Twitter Search">
@@ -26,8 +25,8 @@
                     <button id="run_search">Go</button>
                 </nav>
             </header>
-            <section id="tweets">
-                
+            <section id="overlay"><img src="img/load.gif" /></section>
+            <section id="tweets" data-pagenum="1">
             </section>
         </section><!-- /Main -->
 
