fixed multiple calls on scroll event / added styling & tweet counter

--- a/index.html
+++ b/index.html
@@ -26,8 +26,10 @@
                 </nav>
             </header>
             <section id="overlay"><img src="img/load.gif" /></section>
-            <section id="tweets" data-pagenum="1">
+            <section id="tweets">
+                <header id="results_header"></header>
             </section>
+            <footer id="twit_count"></footer>
         </section><!-- /Main -->
 
 
