design elements, cleanup of code, and updated readme file

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
         <section id="main">
             <header>
                 <h2>Infinite Twitter Search Demo</h2>
+                <p>Search Twitter's latest posts! <small>Note: Use a word that is being used frequently (such as "the") for best results.</small></p>
                 <nav>
                     <input id="twit_search"/>
                     <button id="run_search">Go</button>
