add alt tag to inline image

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                     <button id="run_search">Go</button>
                 </nav>
             </header>
-            <section id="overlay"><img src="img/load.gif" /></section>
+            <section id="overlay"><img src="img/load.gif" alt="Loading.." /></section>
             <section id="tweets">
                 <header id="results_header"></header>
             </section>
